--- a/assets/style.css
+++ b/assets/style.css
@@ -175,14 +175,17 @@ body, .main {
         width: 100%;
     }
 }
-.secondary-layer{
+
+/* Base Styles for larger screens */
+.secondary-layer {
     width: 100%;
     background-color: #e5e5ed;
     display: flex;
     justify-content: center;
     padding-bottom: 50px;
 }
-.secondary-container{
+
+.secondary-container {
     display: flex;
     width: 85%;
     max-width: 1450px;
@@ -192,7 +195,8 @@ body, .main {
     gap: 30px;
     border: 3px solid #f8f8f8;
 }
-.primary-inner{
+
+.primary-inner {
     flex: 1;
     margin-left: 30px;
     margin-bottom: 30px;
@@ -201,7 +205,8 @@ body, .main {
     border: 1px solid;
     background-color: #fff;
 }
-.sec-inner{
+
+.sec-inner {
     flex: 2;
     margin-bottom: 30px;
     border-radius: 30px;
@@ -210,9 +215,10 @@ body, .main {
     background-color: #fff;
     font-size: 1.3rem;
 }
-.tertiary-inner{
+
+.tertiary-inner {
     flex: 1.5;
-    background-image: url('./images/Moon.png'); 
+    background-image: url('./images/Moon.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -220,7 +226,8 @@ body, .main {
     margin-right: 30px;
     border-radius: 30px;
 }
-.div-holder{
+
+.div-holder {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: 75px 75px;
@@ -229,67 +236,81 @@ body, .main {
     border-radius: 20px;
     padding: 10px 10px;
 }
-.empty-div{
+
+.empty-div {
     border-radius: 20px;
     background-color: #e5e5ed;
 }
-.htree{
+
+.htree {
     margin-top: 25px;
     margin-bottom: 10px;
     padding-left: 15px;
 }
-.filled-div{
+
+.filled-div {
     height: 50px;
     position: relative;
 }
-.svg{
+
+.svg {
     width: 50px;
     display: inline-block;
     padding-top: 10px;
     padding-left: 15px;
     margin-right: 10px;
 }
-.sentences{
+
+.sentences {
     display: inline-block;
     position: absolute;
     top: 10px;
 }
-.inner-heading{
-    font-size: 2rem
+
+.inner-heading {
+    font-size: 2rem;
 }
-.LayerPics{
-   display: flex;
-   border-top-left-radius:30px ;
-   border-top-right-radius: 30px;
-   height: 7vh;
-   padding-left: 60px;
+
+.LayerPics {
+    display: flex;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    height: 7vh;
+    padding-left: 60px;
 }
-.image{
+
+.image {
     display: flex;
     align-items: flex-end;
 }
-h2, .LayerMsg{
+
+h2, .LayerMsg {
     margin-top: 20px;
     margin-left: 6%;
 }
-.TickBox{
+
+.TickBox {
     width: 90%;
     margin-left: 6%;
     height: 60px;
     position: relative;
 }
-.dot, .wordings, .pics{
+
+.dot, .wordings, .pics {
     display: inline-block;
 }
-.dot, .pics{
+
+.dot, .pics {
     margin-top: 12px;
 }
-.dot{
+
+.dot {
     height: 30px;
     width: 30px;
     margin-right: 15px;
 }
-.circle{
+
+.circle {
     height: 30px;
     width: 30px;
     border-radius: 50%;
@@ -297,27 +318,31 @@ h2, .LayerMsg{
     justify-content: center;
     align-items: center;
 }
-.pics{
+
+.pics {
     position: absolute;
     right: 10px;
 }
-.under-class{
+
+.under-class {
     position: absolute;
     width: 100%;
-    bottom: 0px;
+    bottom: 0;
     height: 125px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.dim-square{
+
+.dim-square {
     height: 65px;
     width: 60%;
     border-radius: 30px;
     margin-right: 10px;
     background-color: #e5e5ed;
 }
-.cirular-pic{
+
+.cirular-pic {
     height: 65px;
     width: 65px;
     border-radius: 50%;
@@ -325,7 +350,8 @@ h2, .LayerMsg{
     align-items: center;
     justify-content: center;
 }
-.sub-circular, .bot{
+
+.sub-circular, .bot {
     height: 55px;
     width: 55px;
     border-radius: 50%;
@@ -334,7 +360,7 @@ h2, .LayerMsg{
     justify-content: center;
 }
 
-.fourth-layer{
+.fourth-layer {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -345,7 +371,8 @@ h2, .LayerMsg{
     transition: all .500s;
     scroll-behavior: smooth;
 }
-.magic{
+
+.magic {
     width: 95%;
     height: 95vh;
     padding: 30px;
@@ -353,7 +380,8 @@ h2, .LayerMsg{
     position: sticky;
     top: 0;
 }
-.left-flow{
+
+.left-flow {
     width: 50%;
     height: 90vh;
     border-radius: 70px 0 0 70px;
@@ -363,7 +391,8 @@ h2, .LayerMsg{
     flex-direction: column;
     font-size: 2.5rem;
 }
-.right-flow{
+
+.right-flow {
     width: 50%;
     height: 90vh;
     border-radius: 0 70px 70px 0;
@@ -372,34 +401,44 @@ h2, .LayerMsg{
     overflow: hidden;
 }
 
-.first-transition{
+/* Transition Layers */
+.first-transition {
     z-index: 1;
 }
-.second-transition{
+
+.second-transition {
     z-index: 2;
 }
-.third-transiton{
+
+.third-transition {
     z-index: 3;
 }
-.fourth-transition{
+
+.fourth-transition {
     z-index: 4;
 }
-.fifth-transition{
+
+.fifth-transition {
     z-index: 5;
 }
-.purple{
+
+.purple {
     background-color: #B3B1EC;
 }
-.green{
+
+.green {
     background-color: #95CBB7;
 }
-.blue{
+
+.blue {
     background-color: #A0E2FA;
 }
-.red{
-    background-color:  #FCA79C;
+
+.red {
+    background-color: #FCA79C;
 }
-.fifth-layer{
+
+.fifth-layer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -410,90 +449,184 @@ h2, .LayerMsg{
     font-family: sans-serif;
     color: #dedeeb;
     padding-top: 100px;
+    background-color: #20202E;
 }
-.full{
+
+.full {
     width: 70%;
     margin-left: 15%;
 }
-.letter{
+
+.letter {
     display: inline-block;
 }
-.orange-letter{
+
+.orange-letter {
     color: #f84f39;
 }
-.fifth-layer{
-    background-color: #20202E
-}
-.two{
+
+/* Opacity Classes */
+.two {
     opacity: 0.91;
 }
-.three{
+
+.three {
     opacity: 0.82;
 }
-.four{
+
+.four {
     opacity: 0.73;
 }
-.five{
+
+.five {
     opacity: 0.64;
 }
-.six{
+
+.six {
     opacity: 0.55;
 }
-.seven{
+
+.seven {
     opacity: 0.46;
 }
-.eight{
+
+.eight {
     opacity: 0.37;
 }
-.nine{
+
+.nine {
     opacity: 0.28;
 }
-.ten{
+
+.ten {
     opacity: 0.19;
 }
-.eleven{
+
+.eleven {
     opacity: 0.1;
 }
-.new{
+
+.new {
     color: #343440;
     font-size: 1rem;
 }
-.news{
+
+.news {
     height: 30px;
 }
 
-.sixth-layer{
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    .secondary-container {
+        width: 90%;
+    }
+
+    .primary-inner, .sec-inner, .tertiary-inner {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+@media (max-width: 992px) {
+    .secondary-container {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .primary-inner, .sec-inner, .tertiary-inner {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .tertiary-inner {
+        margin-right: 0;
+        margin-bottom: 15px;
+    }
+
+    .div-holder {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+}
+
+@media (max-width: 768px) {
+    .left-flow, .right-flow {
+        width: 100%;
+        height: auto;
+        border-radius: 0;
+    }
+
+    .magic {
+        width: 100%;
+        height: auto;
+        padding: 15px;
+    }
+
+    .fifth-layer {
+        font-size: 5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .inner-heading {
+        font-size: 1.5rem;
+    }
+
+    .dot, .pics {
+        margin-top: 5px;
+    }
+
+    .dim-square, .cirular-pic, .sub-circular, .bot {
+        height: 50px;
+        width: 50px;
+    }
+
+    .fifth-layer {
+        font-size: 3rem;
+        padding-top: 50px;
+    }
+}
+/* Base Styles for the new layers */
+.sixth-layer {
     display: flex;
     width: 100%;
     height: 100vh;
     align-items: center;
     justify-content: center;
+    padding: 0 5%;
+    box-sizing: border-box;
 }
-.left-float{
-    height: auto;
+
+.left-float {
     width: auto;
     margin-right: 5%;
 }
-.right-float{
-    height: auto;
-    width: 700px;
+
+.right-float {
+    max-width: 700px;
+    width: 100%;
 }
-.description{
+
+.description {
     display: flex;
     flex-direction: column;
 }
-.entry-text{
+
+.entry-text {
     display: inline;
     font-size: 1.5rem;
     margin-right: 30px;
 }
-.bottom-layer{
+
+.bottom-layer {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #fff;
     font-size: 2rem;
     line-height: 1.5;
 }
-.seventh-layer{
+
+/* Styling for the seventh-layer */
+.seventh-layer {
     width: 100%;
     height: 70vh;
     background-color: #20202E;
@@ -501,7 +634,8 @@ h2, .LayerMsg{
     align-items: center;
     justify-content: center;
 }
-.rounded{
+
+.rounded {
     height: 90%;
     width: 70%;
     font-size: 4rem;
@@ -512,7 +646,9 @@ h2, .LayerMsg{
     background-color: rgb(42, 150, 111);
     border-radius: 450px;
 }
-.eight-layer{
+
+/* Styling for the eight-layer */
+.eight-layer {
     background-color: #20202E;
     height: 100vh;
     width: 100%;
@@ -520,31 +656,40 @@ h2, .LayerMsg{
     align-items: center;
     justify-content: center;
     gap: 50px;
+    flex-wrap: wrap;
 }
-.big-div{
+
+.big-div {
     height: 65%;
     max-width: 70%;
     display: flex;
     flex: 1;
     position: relative;
+    flex-wrap: wrap;
 }
-.boxes{
+
+.boxes {
     flex: 1;
+    min-width: 200px;
 }
-.heading{
-    height: 10%;
-    position: relative;
-    margin-left: 0px;
-    font-family:  sans-serif;
+
+.heading {
+    height: auto;
+    margin-left: 0;
+    font-family: sans-serif;
+    color: #dedeeb;
 }
-.internal-content{
+
+.internal-content {
     height: 50px;
     font-size: 1.5rem;
     font-weight: 400;
     color: #f8f8f8;
-    font-family:  sans-serif;
+    font-family: sans-serif;
+    margin-bottom: 10px;
 }
-.big-box{
+
+.big-box {
     height: 40%;
     max-height: 300px;
     width: 90%;
@@ -552,32 +697,158 @@ h2, .LayerMsg{
     border-radius: 30px;
     position: relative;
 }
-.upgrade-box{
-    color:#8885e8;
+
+.upgrade-box {
+    color: #8885e8;
     font-size: 2rem;
     position: absolute;
     top: 10px;
     left: 15px;
-    font-family:  sans-serif;
+    font-family: sans-serif;
     font-weight: 400;
 }
-.version{
+
+.version {
     height: 30px;
     width: 30%;
     background-color: #8885e8;
-    position: relative;
-    top: 80%;
+    position: absolute;
+    bottom: 10px;
     left: 20px;
     border-radius: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1rem;
+    color: #fff;
 }
-.foot{
+
+/* Footer styling */
+.foot {
     text-align: center;
     width: 100%;
     background-color: #20202E;
     color: #f8f8f8;
     padding-bottom: 25px;
     height: 50px;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    .sixth-layer {
+        flex-direction: column;
+    }
+
+    .left-float, .right-float {
+        margin-right: 0;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .description {
+        align-items: center;
+    }
+
+    .entry-text {
+        font-size: 1.2rem;
+        margin-right: 15px;
+    }
+
+    .bottom-layer {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .sixth-layer {
+        padding: 10px;
+    }
+
+    .right-float {
+        width: 100%;
+    }
+
+    .seventh-layer {
+        height: 60vh;
+    }
+
+    .rounded {
+        font-size: 3rem;
+    }
+
+    .eight-layer {
+        padding: 10px;
+    }
+
+    .big-div {
+        height: auto;
+        max-width: 90%;
+    }
+
+    .boxes {
+        min-width: 100%;
+    }
+
+    .heading {
+        font-size: 1.5rem;
+    }
+
+    .internal-content {
+        font-size: 1.2rem;
+    }
+
+    .big-box {
+        height: auto;
+        max-height: 250px;
+    }
+}
+
+@media (max-width: 480px) {
+    .sixth-layer {
+        padding: 5px;
+    }
+
+    .entry-text {
+        font-size: 1rem;
+        margin-right: 10px;
+    }
+
+    .bottom-layer {
+        font-size: 1rem;
+    }
+
+    .seventh-layer {
+        height: 50vh;
+    }
+
+    .rounded {
+        font-size: 2rem;
+    }
+
+    .eight-layer {
+        padding: 5px;
+        gap: 20px;
+    }
+
+    .big-div {
+        height: auto;
+        max-width: 100%;
+    }
+
+    .boxes {
+        min-width: 100%;
+    }
+
+    .heading {
+        font-size: 1.2rem;
+    }
+
+    .internal-content {
+        font-size: 1rem;
+    }
+
+    .big-box {
+        height: auto;
+        max-height: 200px;
+    }
 }
